fix: typo blocks cross account jump role

--- a/cxm-integration-aws-root.yaml
+++ b/cxm-integration-aws-root.yaml
@@ -176,7 +176,7 @@ Resources:
             Effect: Allow
             Action:
               - sts:AssumeRole
-            Resource: !Sub "arn:aws:iam::aws:role/${Prefix}*"
+            Resource: !Sub "arn:aws:iam::*:role/${Prefix}*"
 
   ################################################################
   #
