--- a/cxm-integration-aws-root.yaml
+++ b/cxm-integration-aws-root.yaml
@@ -118,8 +118,8 @@ Resources:
               - es:DescribeReserved*
               - es:ListTags
               # Saving Plans
-              - savingplans:Describe*
-              - savingplans:List*
+              - savingsplans:Describe*
+              - savingsplans:List*
           - Sid: DescribeReportDefinitions
             Effect: Allow
             Action:
